src/QuadStore.Core/trig-grammar/TrigParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from TrigParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class TrigParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		AT_PREFIX=1, AT_BASE=2, AT_VERSION=3, PREFIX=4, BASE=5, VERSION=6, GRAPH=7, 
		A=8, TRUE=9, FALSE=10, TILDE=11, HATHAT=12, LT2=13, GT2=14, LBRACE_PIPE=15, 
		PIPE_RBRACE=16, LBRACE=17, RBRACE=18, LPAREN=19, RPAREN=20, LBRACK=21, 
		RBRACK=22, DOT=23, COMMA=24, SEMI=25, INTEGER=26, DECIMAL=27, DOUBLE=28, 
		STRING_LITERAL_QUOTE=29, STRING_LITERAL_SINGLE_QUOTE=30, STRING_LITERAL_LONG_SINGLE_QUOTE=31, 
		STRING_LITERAL_LONG_QUOTE=32, LANG_DIR=33, IRIREF=34, PNAME_NS=35, PNAME_LN=36, 
		BLANK_NODE_LABEL=37, ANON=38, WS=39, COMMENT=40, HATHAT_WS=41;
	public const int
		RULE_trigDoc = 0, RULE_block = 1, RULE_triplesOrGraph = 2, RULE_triples2 = 3, 
		RULE_wrappedGraph = 4, RULE_triplesBlock = 5, RULE_labelOrSubject = 6, 
		RULE_directive = 7, RULE_prefixID = 8, RULE_base = 9, RULE_version = 10, 
		RULE_versionSpecifier = 11, RULE_sparqlPrefix = 12, RULE_sparqlBase = 13, 
		RULE_sparqlVersion = 14, RULE_triples = 15, RULE_predicateObjectList = 16, 
		RULE_objectList = 17, RULE_verb = 18, RULE_subject = 19, RULE_predicate = 20, 
		RULE_object = 21, RULE_literal = 22, RULE_blankNodePropertyList = 23, 
		RULE_collection = 24, RULE_numericLiteral = 25, RULE_rdfLiteral = 26, 
		RULE_string_ = 27, RULE_booleanLiteral = 28, RULE_iri = 29, RULE_prefixedName = 30, 
		RULE_blankNode = 31, RULE_reifier = 32, RULE_reifiedTriple = 33, RULE_rtSubject = 34, 
		RULE_rtObject = 35, RULE_tripleTerm = 36, RULE_ttSubject = 37, RULE_ttObject = 38, 
		RULE_annotation = 39, RULE_annotationBlock = 40;
	public static readonly string[] ruleNames = {
		"trigDoc", "block", "triplesOrGraph", "triples2", "wrappedGraph", "triplesBlock", 
		"labelOrSubject", "directive", "prefixID", "base", "version", "versionSpecifier", 
		"sparqlPrefix", "sparqlBase", "sparqlVersion", "triples", "predicateObjectList", 
		"objectList", "verb", "subject", "predicate", "object", "literal", "blankNodePropertyList", 
		"collection", "numericLiteral", "rdfLiteral", "string_", "booleanLiteral", 
		"iri", "prefixedName", "blankNode", "reifier", "reifiedTriple", "rtSubject", 
		"rtObject", "tripleTerm", "ttSubject", "ttObject", "annotation", "annotationBlock"
	};

	private static readonly string[] _LiteralNames = {
		null, "'@prefix'", "'@base'", "'@version'", "'PREFIX'", "'BASE'", "'VERSION'", 
		"'GRAPH'", "'a'", "'true'", "'false'", "'~'", "'^^'", "'<<'", "'>>'", 
		"'{|'", "'|}'", "'{'", "'}'", "'('", "')'", "'['", "']'", "'.'", "','", 
		"';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "AT_PREFIX", "AT_BASE", "AT_VERSION", "PREFIX", "BASE", "VERSION", 
		"GRAPH", "A", "TRUE", "FALSE", "TILDE", "HATHAT", "LT2", "GT2", "LBRACE_PIPE", 
		"PIPE_RBRACE", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
		"DOT", "COMMA", "SEMI", "INTEGER", "DECIMAL", "DOUBLE", "STRING_LITERAL_QUOTE", 
		"STRING_LITERAL_SINGLE_QUOTE", "STRING_LITERAL_LONG_SINGLE_QUOTE", "STRING_LITERAL_LONG_QUOTE", 
		"LANG_DIR", "IRIREF", "PNAME_NS", "PNAME_LN", "BLANK_NODE_LABEL", "ANON", 
		"WS", "COMMENT", "HATHAT_WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "TrigParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static TrigParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public TrigParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public TrigParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class TrigDocContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(TrigParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DirectiveContext[] directive() {
			return GetRuleContexts<DirectiveContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DirectiveContext directive(int i) {
			return GetRuleContext<DirectiveContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		public TrigDocContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_trigDoc; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.EnterTrigDoc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.ExitTrigDoc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITrigParserVisitor<TResult> typedVisitor = visitor as ITrigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTrigDoc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TrigDocContext trigDoc() {
		TrigDocContext _localctx = new TrigDocContext(Context, State);
		EnterRule(_localctx, 0, RULE_trigDoc);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 532578705662L) != 0)) {
				{
				State = 84;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case AT_PREFIX:
				case AT_BASE:
				case AT_VERSION:
				case PREFIX:
				case BASE:
				case VERSION:
					{
					State = 82;
					directive();
					}
					break;
				case GRAPH:
				case LT2:
				case LBRACE:
				case LPAREN:
				case LBRACK:
				case IRIREF:
				case PNAME_NS:
				case PNAME_LN:
				case BLANK_NODE_LABEL:
				case ANON:
					{
					State = 83;
					block();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 88;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 89;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TriplesOrGraphContext triplesOrGraph() {
			return GetRuleContext<TriplesOrGraphContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WrappedGraphContext wrappedGraph() {
			return GetRuleContext<WrappedGraphContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Triples2Context triples2() {
			return GetRuleContext<Triples2Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GRAPH() { return GetToken(TrigParser.GRAPH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LabelOrSubjectContext labelOrSubject() {
			return GetRuleContext<LabelOrSubjectContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITrigParserVisitor<TResult> typedVisitor = visitor as ITrigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		try {
			State = 98;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case LT2:
			case IRIREF:
			case PNAME_NS:
			case PNAME_LN:
			case BLANK_NODE_LABEL:
			case ANON:
				EnterOuterAlt(_localctx, 1);
				{
				State = 91;
				triplesOrGraph();
				}
				break;
			case LBRACE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 92;
				wrappedGraph();
				}
				break;
			case LPAREN:
			case LBRACK:
				EnterOuterAlt(_localctx, 3);
				{
				State = 93;
				triples2();
				}
				break;
			case GRAPH:
				EnterOuterAlt(_localctx, 4);
				{
				State = 94;
				Match(GRAPH);
				State = 95;
				labelOrSubject();
				State = 96;
				wrappedGraph();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TriplesOrGraphContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LabelOrSubjectContext labelOrSubject() {
			return GetRuleContext<LabelOrSubjectContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WrappedGraphContext wrappedGraph() {
			return GetRuleContext<WrappedGraphContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PredicateObjectListContext predicateObjectList() {
			return GetRuleContext<PredicateObjectListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(TrigParser.DOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ReifiedTripleContext reifiedTriple() {
			return GetRuleContext<ReifiedTripleContext>(0);
		}
		public TriplesOrGraphContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_triplesOrGraph; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.EnterTriplesOrGraph(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.ExitTriplesOrGraph(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITrigParserVisitor<TResult> typedVisitor = visitor as ITrigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTriplesOrGraph(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TriplesOrGraphContext triplesOrGraph() {
		TriplesOrGraphContext _localctx = new TriplesOrGraphContext(Context, State);
		EnterRule(_localctx, 4, RULE_triplesOrGraph);
		int _la;
		try {
			State = 113;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IRIREF:
			case PNAME_NS:
			case PNAME_LN:
			case BLANK_NODE_LABEL:
			case ANON:
				EnterOuterAlt(_localctx, 1);
				{
				State = 100;
				labelOrSubject();
				State = 105;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case LBRACE:
					{
					State = 101;
					wrappedGraph();
					}
					break;
				case A:
				case IRIREF:
				case PNAME_NS:
				case PNAME_LN:
					{
					State = 102;
					predicateObjectList();
					State = 103;
					Match(DOT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case LT2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 107;
				reifiedTriple();
				State = 109;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 120259084544L) != 0)) {
					{
					State = 108;
					predicateObjectList();
					}
				}

				State = 111;
				Match(DOT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Triples2Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BlankNodePropertyListContext blankNodePropertyList() {
			return GetRuleContext<BlankNodePropertyListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(TrigParser.DOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PredicateObjectListContext predicateObjectList() {
			return GetRuleContext<PredicateObjectListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CollectionContext collection() {
			return GetRuleContext<CollectionContext>(0);
		}
		public Triples2Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_triples2; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.EnterTriples2(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.ExitTriples2(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITrigParserVisitor<TResult> typedVisitor = visitor as ITrigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTriples2(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Triples2Context triples2() {
		Triples2Context _localctx = new Triples2Context(Context, State);
		EnterRule(_localctx, 6, RULE_triples2);
		int _la;
		try {
			State = 125;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case LBRACK:
				EnterOuterAlt(_localctx, 1);
				{
				State = 115;
				blankNodePropertyList();
				State = 117;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 120259084544L) != 0)) {
					{
					State = 116;
					predicateObjectList();
					}
				}

				State = 119;
				Match(DOT);
				}
				break;
			case LPAREN:
				EnterOuterAlt(_localctx, 2);
				{
				State = 121;
				collection();
				State = 122;
				predicateObjectList();
				State = 123;
				Match(DOT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WrappedGraphContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(TrigParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(TrigParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TriplesBlockContext triplesBlock() {
			return GetRuleContext<TriplesBlockContext>(0);
		}
		public WrappedGraphContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_wrappedGraph; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.EnterWrappedGraph(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.ExitWrappedGraph(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITrigParserVisitor<TResult> typedVisitor = visitor as ITrigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWrappedGraph(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WrappedGraphContext wrappedGraph() {
		WrappedGraphContext _localctx = new WrappedGraphContext(Context, State);
		EnterRule(_localctx, 8, RULE_wrappedGraph);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127;
			Match(LBRACE);
			State = 129;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 532578574336L) != 0)) {
				{
				State = 128;
				triplesBlock();
				}
			}

			State = 131;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TriplesBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TriplesContext triples() {
			return GetRuleContext<TriplesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(TrigParser.DOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TriplesBlockContext triplesBlock() {
			return GetRuleContext<TriplesBlockContext>(0);
		}
		public TriplesBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_triplesBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.EnterTriplesBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.ExitTriplesBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITrigParserVisitor<TResult> typedVisitor = visitor as ITrigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTriplesBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TriplesBlockContext triplesBlock() {
		TriplesBlockContext _localctx = new TriplesBlockContext(Context, State);
		EnterRule(_localctx, 10, RULE_triplesBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 133;
			triples();
			State = 138;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==DOT) {
				{
				State = 134;
				Match(DOT);
				State = 136;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 532578574336L) != 0)) {
					{
					State = 135;
					triplesBlock();
					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LabelOrSubjectContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IriContext iri() {
			return GetRuleContext<IriContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlankNodeContext blankNode() {
			return GetRuleContext<BlankNodeContext>(0);
		}
		public LabelOrSubjectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_labelOrSubject; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.EnterLabelOrSubject(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.ExitLabelOrSubject(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITrigParserVisitor<TResult> typedVisitor = visitor as ITrigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabelOrSubject(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LabelOrSubjectContext labelOrSubject() {
		LabelOrSubjectContext _localctx = new LabelOrSubjectContext(Context, State);
		EnterRule(_localctx, 12, RULE_labelOrSubject);
		try {
			State = 142;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IRIREF:
			case PNAME_NS:
			case PNAME_LN:
				EnterOuterAlt(_localctx, 1);
				{
				State = 140;
				iri();
				}
				break;
			case BLANK_NODE_LABEL:
			case ANON:
				EnterOuterAlt(_localctx, 2);
				{
				State = 141;
				blankNode();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectiveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PrefixIDContext prefixID() {
			return GetRuleContext<PrefixIDContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BaseContext @base() {
			return GetRuleContext<BaseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VersionContext version() {
			return GetRuleContext<VersionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SparqlPrefixContext sparqlPrefix() {
			return GetRuleContext<SparqlPrefixContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SparqlBaseContext sparqlBase() {
			return GetRuleContext<SparqlBaseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SparqlVersionContext sparqlVersion() {
			return GetRuleContext<SparqlVersionContext>(0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_directive; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.EnterDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITrigParserListener typedListener = listener as ITrigParserListener;
			if (typedListener != null) typedListener.ExitDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITrigParserVisitor<TResult> typedVisitor = visitor as ITrigParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DirectiveContext directive() {
		DirectiveContext _localctx = new DirectiveContext(Context, State);
		EnterRule(_localctx, 14, RULE_directive);
		try {
			State = 150;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case AT_PREFIX:
				EnterOuterAlt(_localctx, 1);
				{
				State = 144;
				prefixID();
				}
				break;
			case AT_BASE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 145;
				@base();
				}
				break;
			case AT_VERSION:
				EnterOuterAlt(_localctx, 3);
				{
				State = 146;
				version();
				}
				break;
			case PREFIX:
				EnterOuterAlt(_localctx, 4);
				{
				State = 147;
				sparqlPrefix();
				}
				break;
			case BASE:
				EnterOuterAlt(_localctx, 5);
				{
				State = 148;
				sparqlBase();
				}
				break;
			case VERSION:
				EnterOuterAlt(_localctx, 6);
				{
				State = 149;
				sparqlVersion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
